colors of the page changed

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="#FCE4EC">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
-    <title>Centro de Apoyo y Refuerzo Escolar</title>
+    <title>El Club de Tareas - Apoyo Escolar</title>
     <meta name="description"
-        content="Centro de apoyo y refuerzo escolar para alumnos desde los 3 años. Kinder, primaria y secundaria.">
+        content="El Club de Tareas: Ayuda con tareas, proyectos y preparación de exámenes para niños y jóvenes de primaria, secundaria y preparatoria.">
     <link rel="stylesheet" href="css/general.css">
     <link rel="stylesheet" href="css/animations.css">
     <link rel="stylesheet" href="css/navbar.css">
@@ -63,12 +63,8 @@
     <header id="banner" class="lofi-banner">
         <!-- Canvas removed to eliminate circle animation -->
         <div class="banner-content reveal">
-            <h1 aria-label="Centro de Apoyo Escolar">
-                <span class="letter">C</span><span class="letter">e</span><span class="letter">n</span><span class="letter">t</span><span class="letter">r</span><span class="letter">o</span>
-                <span class="letter"> </span>
-                <span class="letter">E</span><span class="letter">s</span><span class="letter">c</span><span class="letter">o</span><span class="letter">l</span><span class="letter">a</span><span class="letter">r</span>
-            </h1>
-            <p>Refuerzo escolar para Kinder, Primaria y Secundaria</p>
+            <h1>El Club de Tareas</h1>
+            <p>Ayuda con tareas y proyectos</p>
         </div>
 
         <!-- Mobile Dynamic Text (Moved to bottom) -->
@@ -96,10 +92,16 @@
 
         <div class="about-container">
             <div class="about-icon">🌱</div>
-            <h2>Sobre Nosotros</h2>
-            <p>Somos un centro dedicado al <strong>apoyo y refuerzo escolar</strong> para alumnos desde los 3 años de edad. Abarcamos niveles de <strong>Kinder, Primaria y Secundaria</strong>.</p>
-            <p>Nuestro objetivo es brindar las herramientas necesarias para que cada estudiante alcance su máximo potencial académico. Ofrecemos un enfoque personalizado en un ambiente seguro y motivador, ayudando a los alumnos a superar retos escolares y desarrollar hábitos de estudio efectivos.</p>
-            <p>Creemos en el potencial de cada niño y joven, y trabajamos para fortalecer su confianza y amor por el aprendizaje.</p>
+            <h2>Sobre El Club</h2>
+            <p>Somos un espacio dedicado a brindar <strong>apoyo escolar integral</strong> para estudiantes de
+                <strong>Primaria, Secundaria y Preparatoria</strong>.
+            </p>
+            <p>Nuestro objetivo es facilitar la vida académica de los alumnos, ayudándoles con sus <strong>tareas
+                    diarias, preparación de exposiciones, proyectos escolares y estudio para exámenes</strong>.
+                Ofrecemos un ambiente tranquilo y enfocado donde pueden concentrarse y resolver sus dudas con la guía de
+                expertos.</p>
+            <p>Ya sea que necesiten regularización en una materia difícil o simplemente un lugar para hacer la tarea sin
+                distracciones, ¡aquí estamos para ayudarles!</p>
         </div>
     </section>
 
@@ -107,29 +109,29 @@
         <h2>Nuestros Programas</h2>
         <div id="activities-list" class="activities-grid">
             <div class="activity-card" data-id="kinder">
-                <div class="card-icon">🧸</div>
-                <h3>Kinder</h3>
-                <p>Estimulación temprana e iniciación a la lectoescritura para los más pequeños.</p>
+                <div class="card-icon">📝</div>
+                <h3>Ayuda con Tareas</h3>
+                <p>Supervisión y apoyo para completar las tareas diarias de todas las materias.</p>
             </div>
             <div class="activity-card" data-id="primaria">
-                <div class="card-icon">📚</div>
-                <h3>Primaria</h3>
-                <p>Apoyo en tareas, lectura, escritura y matemáticas. Nivelación académica.</p>
+                <div class="card-icon">🗣️</div>
+                <h3>Exposiciones</h3>
+                <p>Asesoría para preparar exposiciones, diapositivas y mejorar la oratoria.</p>
             </div>
             <div class="activity-card" data-id="secundaria">
-                <div class="card-icon">📐</div>
-                <h3>Secundaria</h3>
-                <p>Refuerzo en materias específicas y desarrollo de técnicas de estudio efectivas.</p>
+                <div class="card-icon">🎨</div>
+                <h3>Proyectos</h3>
+                <p>Guía y apoyo en la realización de proyectos escolares creativos y de investigación.</p>
             </div>
             <div class="activity-card" data-id="talleres">
-                <div class="card-icon">🎨</div>
-                <h3>Talleres</h3>
-                <p>Actividades complementarias para el desarrollo integral y creativo.</p>
+                <div class="card-icon">📚</div>
+                <h3>Preparación de Exámenes</h3>
+                <p>Repaso de temas clave y técnicas de estudio para obtener mejores calificaciones.</p>
             </div>
             <div class="activity-card" data-id="personalizada">
-                <div class="card-icon">⭐</div>
-                <h3>Atención Personalizada</h3>
-                <p>Grupos reducidos y atención individualizada para un mejor aprendizaje.</p>
+                <div class="card-icon">👩‍🏫</div>
+                <h3>Preparación de Clases</h3>
+                <p>Adelanto de temas y regularización para estar siempre al día en clase.</p>
             </div>
         </div>
         <div id="activity-detail" class="hidden"></div>
@@ -232,34 +234,37 @@
         <div class="testimonials-container">
             <div class="testimonial-card">
                 <div class="quote-icon">❝</div>
-                <p>Gracias al centro, mi hijo ha mejorado mucho sus calificaciones en matemáticas. ¡Estamos muy felices con el progreso!</p>
+                <p>El Club de Tareas ha sido una salvación. Mi hijo termina sus deberes a tiempo y entiende mejor los
+                    temas de matemáticas.</p>
                 <div class="author">
                     <div class="author-avatar">👩</div>
                     <div class="author-info">
-                        <span>Claudia Martínez</span>
-                        <small>Mamá de Luis (Primaria)</small>
+                        <span>María López</span>
+                        <small>Mamá de Diego (Primaria)</small>
                     </div>
                 </div>
             </div>
             <div class="testimonial-card">
                 <div class="quote-icon">❝</div>
-                <p>El apoyo en lectura para mi hija de Kinder ha sido excelente. ¡Ya está leyendo sus primeras palabras con mucha confianza!</p>
+                <p>Me ayudaron muchísimo con mi proyecto de ciencias. ¡Saqué 10! Además, el ambiente es súper relajado.
+                </p>
                 <div class="author">
                     <div class="author-avatar">👨</div>
                     <div class="author-info">
-                        <span>Roberto Sánchez</span>
-                        <small>Papá de Ana (Kinder)</small>
+                        <span>Carlos Ruiz</span>
+                        <small>Estudiante de Secundaria</small>
                     </div>
                 </div>
             </div>
             <div class="testimonial-card">
                 <div class="quote-icon">❝</div>
-                <p>Las técnicas de estudio que le enseñaron a mi hijo de secundaria le han ayudado a organizarse mejor y estudiar solo.</p>
+                <p>Excelente apoyo para los exámenes de preparatoria. Los tutores explican muy bien y tienen mucha
+                    paciencia.</p>
                 <div class="author">
                     <div class="author-avatar">👩</div>
                     <div class="author-info">
-                        <span>Patricia Gómez</span>
-                        <small>Mamá de Jorge (Secundaria)</small>
+                        <span>Laura Sánchez</span>
+                        <small>Mamá de Sofía (Preparatoria)</small>
                     </div>
                 </div>
             </div>
@@ -273,38 +278,40 @@
         <div class="faq-container">
             <div class="faq-item">
                 <div class="faq-question">
-                    <span>¿A partir de qué edad pueden asistir?</span>
+                    <span>¿Qué niveles escolares atienden?</span>
                     <span class="faq-icon">+</span>
                 </div>
                 <div class="faq-answer">
-                    <p>Recibimos alumnos desde los 3 años de edad en adelante, cubriendo etapas de Kinder, Primaria y Secundaria.</p>
+                    <p>Atendemos a estudiantes de Primaria, Secundaria y Preparatoria.</p>
                 </div>
             </div>
             <div class="faq-item">
                 <div class="faq-question">
-                    <span>¿Ayudan con las tareas escolares?</span>
+                    <span>¿Solo ayudan con las tareas?</span>
                     <span class="faq-icon">+</span>
                 </div>
                 <div class="faq-answer">
-                    <p>Sí, contamos con un programa específico de apoyo en tareas para reforzar lo aprendido en la escuela.</p>
+                    <p>No, también ayudamos con proyectos escolares, preparación de exposiciones, estudio para exámenes
+                        y regularización de materias.</p>
                 </div>
             </div>
             <div class="faq-item">
                 <div class="faq-question">
-                    <span>¿Las clases son individuales o grupales?</span>
+                    <span>¿Tienen material para hacer maquetas?</span>
                     <span class="faq-icon">+</span>
                 </div>
                 <div class="faq-answer">
-                    <p>Manejamos grupos reducidos para asegurar una atención personalizada, aunque también ofrecemos sesiones individuales si es necesario.</p>
+                    <p>Contamos con material básico, pero para proyectos específicos recomendamos traer los materiales
+                        necesarios. Nosotros ponemos las herramientas y la guía.</p>
                 </div>
             </div>
             <div class="faq-item">
                 <div class="faq-question">
-                    <span>¿Ofrecen clases de prueba?</span>
+                    <span>¿Cómo son los horarios?</span>
                     <span class="faq-icon">+</span>
                 </div>
                 <div class="faq-answer">
-                    <p>¡Sí! Puedes agendar una visita o una clase muestra para conocer nuestra metodología y facilidades.</p>
+                    <p>Manejamos horarios flexibles por la tarde. Contáctanos para conocer la disponibilidad actual.</p>
                 </div>
             </div>
         </div>
@@ -379,7 +386,7 @@
 
     <footer class="lofi-footer reveal">
         <div class="footer-content">
-            <h3>Centro de Apoyo Escolar</h3>
+            <h3>El Club de Tareas</h3>
             <p>&copy; 2025 Todos los derechos reservados.</p>
             <div class="social-links">
                 <a href="https://www.instagram.com/karinagarciap_">Instagram</a>
