desktop navbar updated

--- a/index.html
+++ b/index.html
@@ -63,7 +63,13 @@
     <header id="banner" class="lofi-banner">
         <!-- Canvas removed to eliminate circle animation -->
         <div class="banner-content reveal">
-            <h1>El Club de Tareas</h1>
+            <h1 aria-label="El Club de Tareas">
+                <span class="letter">E</span><span class="letter">l</span>
+                <span class="letter">C</span><span class="letter">l</span><span class="letter">u</span><span class="letter">b</span>
+                <span class="letter">d</span><span class="letter">e</span>
+                <span class="letter">T</span><span class="letter">a</span><span class="letter">r</span><span class="letter">e</span><span class="letter">a</span><span class="letter">s</span>
+            </h1>
+
             <p>Ayuda con tareas y proyectos</p>
         </div>
 
@@ -230,46 +236,71 @@
 
 
     <section id="testimonials" class="testimonials-section reveal">
-        <h2>Lo que dicen las mamás</h2>
+        <h2>Testimonios</h2>
         <div class="testimonials-container">
             <div class="testimonial-card">
                 <div class="quote-icon">❝</div>
-                <p>El Club de Tareas ha sido una salvación. Mi hijo termina sus deberes a tiempo y entiende mejor los
-                    temas de matemáticas.</p>
+                <p>Llegamos preocupados porque nuestro hijo no hablaba mucho, pero con la paciencia y las actividades de
+                    aquí, ha avanzado muchísimo. ¡Ahora no para de hablar!</p>
                 <div class="author">
                     <div class="author-avatar">👩</div>
                     <div class="author-info">
-                        <span>María López</span>
-                        <small>Mamá de Diego (Primaria)</small>
+                        <span>Laura Méndez</span>
+                        <small>Mamá de Santiago (5 años)</small>
                     </div>
                 </div>
             </div>
             <div class="testimonial-card">
                 <div class="quote-icon">❝</div>
-                <p>Me ayudaron muchísimo con mi proyecto de ciencias. ¡Saqué 10! Además, el ambiente es súper relajado.
-                </p>
+                <p>Mi hija tenía problemas con ciertas texturas y ruidos. Las terapias sensoriales le han ayudado a
+                    estar más tranquila y a disfrutar más de su entorno. Estamos muy agradecidos.</p>
                 <div class="author">
                     <div class="author-avatar">👨</div>
                     <div class="author-info">
-                        <span>Carlos Ruiz</span>
-                        <small>Estudiante de Secundaria</small>
+                        <span>Roberto Díaz</span>
+                        <small>Papá de Lucía (6 años)</small>
                     </div>
                 </div>
             </div>
             <div class="testimonial-card">
                 <div class="quote-icon">❝</div>
-                <p>Excelente apoyo para los exámenes de preparatoria. Los tutores explican muy bien y tienen mucha
-                    paciencia.</p>
+                <p>Nos ha servido mucho para que nuestro pequeño aprenda a gestionar sus emociones. Las herramientas que
+                    nos dan también nos sirven en casa. Un ambiente lleno de amor.</p>
                 <div class="author">
                     <div class="author-avatar">👩</div>
                     <div class="author-info">
-                        <span>Laura Sánchez</span>
-                        <small>Mamá de Sofía (Preparatoria)</small>
+                        <span>Carmen Obregón</span>
+                        <small>Mamá de Diego (4 años)</small>
+                    </div>
+                </div>
+            </div>
+            <div class="testimonial-card">
+                <div class="quote-icon">❝</div>
+                <p>El equipo es increíblemente profesional y cariñoso. Se nota que aman lo que hacen. Mi hijo entra
+                    feliz a cada sesión y sale con una sonrisa.</p>
+                <div class="author">
+                    <div class="author-avatar">👨</div>
+                    <div class="author-info">
+                        <span>Javier Soto</span>
+                        <small>Papá de Andrés (5 año)</small>
+                    </div>
+                </div>
+            </div>
+            <div class="testimonial-card">
+                <div class="quote-icon">❝</div>
+                <p>El apoyo académico ha sido clave para que mi hijo se sienta más seguro en la escuela. Ha mejorado su
+                    concentración y sus calificaciones.</p>
+                <div class="author">
+                    <div class="author-avatar">👩</div>
+                    <div class="author-info">
+                        <span>Patricia Vega</span>
+                        <small>Mamá de Elena (6 años)</small>
                     </div>
                 </div>
             </div>
         </div>
     </section>
+
 
 
 
@@ -516,6 +547,7 @@
     <script src="js/banner.js" defer></script>
     <script src="js/activities.js" defer></script>
     <script src="js/gallery.js" defer></script>
+    <script src="js/testimonials.js" defer></script>
     <script src="js/faq.js" defer></script>
     <script src="js/audio.js" defer></script>
 
